# Tank_projects

./: .gitignore  CAMERA_BUILD_INSTRUCTIONS.md  CAN_HARDWARE_SETUP.md  COMMIT_MESSAGE.txt  DIRECTORY_GUIDE.md  DIRECTORY_STRUCTURE.md  ECAM25_BUILD_OVERVIEW.md  FIELD_WIRELESS_SETUP.md  FIXED_COMMIT_STEPS.txt  FRESH_INSTALL_COMPLETE.md  GIT_COMMIT_GUIDE.txt  GPS_WAYPOINT_NAV_PLAN.md  IMU_HEADING_STRATEGY.md  LIDAR_NETWORK_SETUP.md  LIDAR_SETUP_COMPLETE.md  MOTOR_CONTROL_IMPLEMENTATION.md  ODRIVE_JETSON_QUICKSTART.md  ODRIVE_ROS2_NODE_COMPLETE.md  PHASE1_IMPLEMENTATION.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  README.md  REMOTE_VISUALIZATION.md  REMOTE_VIZ_QUICKSTART.md  REMOTE_VIZ_WSL_WINDOWS.md  ROUTER_SETUP_COMPLETE.md  TEST_TELEOP_INSTRUCTIONS.md  URDF_SETUP_CHECKLIST.md  WORKSPACE_CREATED.md  check_odrive_version.sh  configure_gnss_ubx.py  fix_odrive_permissions.sh  frames_2025-12-15_21.50.38.gv  frames_2025-12-15_22.05.16.gv  frames_2025-12-15_22.16.20.gv  frames_2025-12-15_22.30.46.gv  frames_2025-12-15_22.40.49.gv  idle_motors.py  quick_odrive_test.py  set_velocity_limit.py  (+9 more)
.cursor/rules/: README.md
archive/: GIT_SYNC_TEST.md  GNSS_SETUP_COMPLETE.md  workspace_structure.md
archive/cursor_rules/: RULES_SETUP_COMPLETE.md  ros2-workflow-RULE.md  rover-access-RULE.md  tank-project-structure-RULE.md
archive/dev_notes/: AUTONOMOUS_NAV_ROADMAP.md  INSTALLATION_SUMMARY.md  POINT_LIO_QUICKSTART.md  POINT_LIO_SUCCESS.md  POINT_LIO_UNILIDAR_ISSUE.md  POINT_LIO_VERIFICATION.md  REMOTE_RVIZ_SETUP.md  TOPIC_CONNECTIONS.md  reinstall_point_lio.sh  reset_gps.py
archive/freshstart_old/: 01_install_system_prerequisites.sh  03_install_ros2.sh  06_setup_workspace.sh  99_cleanup.sh  INSTALLATION_QUICKSTART.md  README.md
camera_build_workspace/: .gitignore  README.md
camera_build_workspace/docs/: BUILD_GUIDE_NATIVE_PC.md  QUICK_START.txt
camera_build_workspace/scripts/: build_drivers.sh
docs/setup/: GNSS_SETUP.md  (+3 more)
drivers/: README.md  tegra234-p3767-0000-p3768-0000-a0-4lane-ar0234.dtbo
ecam-25docs/: BUILD_ECAM25_JP621_GUIDE.md  NVIDIA_DOWNLOADS_REQUIRED.md  build_ecam25_drivers.sh  e-CAM217_CUMI0234_MOD_MCU_Protocol_App_Note_Rev_1_1.txt  e-CAM25_CUONX_Deliverables_FTP_Details.txt  e-CAM25_CUONX_Developer_Guide_Rev_1_6.txt  e-CAM25_CUONX_GStreamer_Usage_Guide_Rev_1_4.txt  e-CAM25_CUONX_Getting_Started_Manual_Rev_1_4.txt  e-CAM25_CUONX_Linux_App_User_Manual_Rev_1_3.txt  e-CAM25_CUONX_Release_Notes_Rev_1_7.txt  e-CAM25_CUONX_Release_Package_Manifest_Rev_1_3.txt  e-CAM25_CUONX_Trigger_Mode_Application_Note_Rev_1.2.txt  e-CAM25_CUONX_Trigger_and_Strobe_Mode_Application_Note_Rev_1.1.txt  e-CAM_TK1-GUVCView_Build_and_Install_Guide_Rev_1_1.txt  econ25_upgradeto6.2.txt  install_ecam25_built.sh  install_ecam25_jp621.sh
ecam25_drivers_deploy/: install_camera_drivers.sh  tegra234-p3767-0000-p3768-0000-a0-2lane-ar0234.dtbo
freshstart/: 00_install_all.sh  02_install_odrive.sh  04_install_ros2_dev_tools.sh  05_install_sensor_drivers.sh  07_configure_hardware.sh  SCRIPTS_OVERVIEW.md
log/: latest_version-check
nvidiaR36.4.3/: quickstart.txt
odrive_docs/: Control_modes.txt  Control_structure_and_tuning.txt  Encoders.txt  Groud_loops.txt  Odrive_reference.txt  Parameters_and_commands.txt  USB.txt  native_protocal.txt
scripts/: ROVER_QUICK_REFERENCE.md  ROVER_SSH_BRIDGE_README.md  ROVER_SSH_QUICKSTART.md  ROVER_SSH_README.md  ROVER_SSH_V2_IMPROVEMENTS.md  V2_MIGRATION_COMPLETE.md  V2_MIGRATION_SUCCESS.md  rover  rover_ssh_bridge_v1_backup.py  rover_ssh_bridge_v2.py  rover_ssh_wrapper.sh  setup_laptop_ros2.sh  setup_rover_ssh.sh  start_rviz_remote.sh
tank_ws/: CHANGES_MADE.md  FINAL_CHECKLIST.md  INTEGRATION_GUIDE.md  POINT_LIO_SETUP_GUIDE.md  README.md  REMOTE_GAMEPAD_OVERRIDE.md  TOPIC_CONNECTIONS.md  frames_2025-12-14_02.26.25.gv  frames_2025-12-14_05.51.22.gv  frames_2025-12-19_18.50.15.gv  source_workspace.sh  test_autonomous_system.sh  test_point_lio.sh
tank_ws/src/master_bot/: CMakeLists.txt  README.md  ROS2_CONVERSION_SUMMARY.md  URDF_AND_LIDAR_SETUP.md  package.xml
tank_ws/src/master_bot/config/: joint_names_master_bot.yaml  urdf.rviz
tank_ws/src/master_bot/launch/: display.launch.py  display_simple.launch.py  gazebo.launch.py
tank_ws/src/master_bot/meshes/: l_BL2.STL  l_FL2.STL  l_l2.STL  l_l4.STL  l_r1.STL  l_r4.STL  l_r5.STL  l_r7.STL
tank_ws/src/master_bot/urdf/: master_bot.csv  master_bot.urdf
tank_ws/src/master_bot/worlds/: test_world.sdf
tank_ws/src/tank_bringup/: CMakeLists.txt  package.xml
tank_ws/src/tank_bringup/launch/: full_autonomy.launch.py  sensors_localization.launch.py
tank_ws/src/tank_control/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
tank_ws/src/tank_control/config/: odrive_params.yaml  safety_limits.yaml  twist_mux.yaml
tank_ws/src/tank_control/launch/: motor_control.launch.py  odrive_interface.launch.py  teleop_gamepad.launch.py
tank_ws/src/tank_control/tank_control/: __init__.py  odrive_interface_node.py  safety_monitor_node.py  shutdown_handler_node.py  teleop_gamepad_node.py
tank_ws/src/tank_navigation/: CMakeLists.txt  README_GPS_WAYPOINTS.md  README_NAV2.md  package.xml
tank_ws/src/tank_navigation/config/: gps_nav.yaml
tank_ws/src/tank_navigation/config/gps/: navsat_transform.yaml
tank_ws/src/tank_navigation/config/nav2/: nav2_params.yaml  nav2_params_gps.yaml
tank_ws/src/tank_navigation/launch/: gps_waypoint.launch.py  gps_waypoint_nav.launch.py  navigation.launch.py  tank_nav_full.launch.py
tank_ws/src/tank_navigation/tank_navigation/: gps_waypoint_follower.py  gps_waypoint_manager.py
tank_ws/src/tank_navigation/web/: gps_waypoint_planner.html
tank_ws/src/tank_sensors/: CMakeLists.txt  LIDAR_FRAME_FIX.md  package.xml
tank_ws/src/tank_sensors/config/: gnss_enable_nmea.yaml  gnss_f9p.yaml  zed_f9p_tank.yaml
tank_ws/src/tank_sensors/launch/: camera_argus.launch.py  dual_lidar.launch.py  gnss.launch.py  hardware.launch.py  lidar_dual.launch.py
tank_ws/src/tank_sensors/src/: pointcloud_frame_fixer.py
tank_ws/src/tank_sensors/tank_sensors/: ubx_to_navsat_fix.py
unitree_manual/: manual.txt
(+105 files in other folders)
