<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tank_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and configurations for tank autonomous navigation</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>tank_localization</exec_depend>
  <exec_depend>tank_perception</exec_depend>
  <exec_depend>tank_navigation</exec_depend>
  <exec_depend>tank_control</exec_depend>
  <exec_depend>tank_sensors</exec_depend>
  <exec_depend>tank_description</exec_depend>
  <exec_depend>tank_msgs</exec_depend>
  
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

